--- a/src/components/country.css
+++ b/src/components/country.css
@@ -3,6 +3,7 @@ select{
     margin-bottom: 15px;
     width: 107px;
     height: 29px;
+    margin-left: 0px;
 
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
