--- a/src/components/country.css
+++ b/src/components/country.css
@@ -1,11 +1,16 @@
-select{
+.country{
     margin-top: 0px;
-    margin-bottom: 15px;
-    width: 107px;
-    height: 29px;
-    margin-left: 0px;
-
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
     border-radius: 7px;
+    color: black;
+    height: 30px;
+    width: 150px;
+    text-align: left;
+    font-size: 10px;
+    border-radius: 7px 0px 0px 0px;
+    -webkit-border-radius: 7px 0px 0px 0px;
+    -moz-border-radius: 7px 0px 0px 0px;
+    -ms-border-radius: 7px 0px 0px 0px;
+    -o-border-radius: 7px 0px 0px 0px;
 }
