--- a/src/components/paybtn.css
+++ b/src/components/paybtn.css
@@ -25,7 +25,7 @@
   width: 150px;
   text-align: center;
   margin-top: 70px;
-  margin-right: 600px;
+  margin-right: 3git00px;
   -webkit-border-radius: .375rem;
   -moz-border-radius: .375rem;
   -ms-border-radius: .375rem;
