--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -1,245 +1,232 @@
-.summary-container{
-    width: 50%;
-    float: left;
-
-    margin-top: 70px;
+.summary-container {
+  width: 50%;
+  float: left;
+  margin-top: 70px;
 }
-.summary-container h2, p{
-    text-align: left;
-    margin-left: 400px;
-}
-
-.payment-container{
-    background-color: rgb(30, 95, 116);
-    border-radius: 25px;
-    position: absolute;
-    left: 65%;
-    width: 50%;
-    float: right;
-    color: white;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
-
-    margin-top: 70px;
-
-    height: 80%;
+.summary-container h2,
+.summary-container p {
+  text-align: left;
+  margin-left: 400px;
 }
 
+.payment-container {
+  background-color: rgb(30, 95, 116);
+  border-radius: 25px;
+  position: absolute;
+  left: 65%;
+  width: 50%;
+  float: right;
+  color: white;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
 
+  margin-top: 70px;
 
-.normal-shipping, .fast-shipping{
-    border: 1px solid rgb(181, 181, 181);
-    border-radius: 12px;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    -ms-border-radius: 12px;
-    -o-border-radius: 12px;
-
-    box-sizing: border-box;
-
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    width: 530px;
-    height: 115px;
-
-    font-size: 18px;
-    padding-top: 30px;
-    text-align: left;
-    
-}
-.normal-shipping span, .fast-shipping span{
-    color: gray;
-    margin-left: 25px;
-}
-.normal-shipping label, .fast-shipping label{
-    margin-left: 20px;
-
-    float: left;
-    display: block;
-    margin-left: 15px;
-    margin-top: 15px;
+  height: 80%;
 }
 
-.normal-shipping input, .fast-shipping input{
-    height: 40px;
-    width: 40px;
-    margin-right: 25px;
-    margin-left: 270px;
+.normal-shipping,
+.fast-shipping {
+  border: 1px solid rgb(181, 181, 181);
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
 
-    float: right;
-    display: block;
-    margin-left: 15px;
-    margin-top: 15px;
+  box-sizing: border-box;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  width: 530px;
+  height: 115px;
+
+  font-size: 18px;
+  padding-top: 30px;
+  text-align: left;
 }
-.normal-shipping p, .fast-shipping p{
-    
-    float: left;
-    display: block;
-    margin-left: 250px;
-    margin-top: 25px;
+.normal-shipping span,
+.fast-shipping span {
+  color: gray;
+  margin-left: 25px;
 }
+.normal-shipping label,
+.fast-shipping label {
+  margin-left: 20px;
 
-
-.payment-container h2, .payment-container p{
-    text-align: left;
-    margin-left: 150px;
-
-    
-} 
-
-.card-info{
-    text-align: left;
-    margin-left: 200px;
-    font-size: 20px;
-
-    
-    margin-left: 150px;
-    margin-top: 15px;
-}
-
-.email-input, .cardholder-input{
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 400px;
-    height: 30px;
-
-    background: #FFFFFF;
-    border: 1px solid #C5C5C5;
-    border-radius: 7px;
-
-    text-align: center;
+  float: left;
+  display: block;
+  margin-left: 15px;
+  margin-top: 15px;
 }
 
-.card-number{
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 290px;
-    height: 25px;
+.normal-shipping input,
+.fast-shipping input {
+  height: 40px;
+  width: 40px;
+  margin-right: 25px;
+  margin-left: 270px;
 
-    background: #FFFFFF;
-    border: 1px solid #C5C5C5;
-    border-radius: 7px 0px 0px 7px;
-
-    text-align: center;
-    font-size: 10px;
+  float: right;
+  display: block;
+  margin-left: 15px;
+  margin-top: 15px;
 }
-.card-expdate{
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 50px;
-    height: 25px;
-    background: #FFFFFF;
-    border: 1px solid #C5C5C5;
-    border-radius: 0px;
-    font-size: 10px;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    -ms-border-radius: 0px;
-    -o-border-radius: 0px;
-}
-.card-cvc{
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 50px;
-    height: 25px;
-    background: #FFFFFF;
-    border: 1px solid #C5C5C5;
-    border-radius: 0px 7px 7px 0px;
-    font-size: 10px;
-    -webkit-border-radius: 0px 7px 7px 0px;
-    -moz-border-radius: 0px 7px 7px 0px;
-    -ms-border-radius: 0px 7px 7px 0px;
-    -o-border-radius: 0px 7px 7px 0px;
-}
-.billing-address{
-    margin-top: 10px;
-    margin-bottom: 0px;
-    width: 250px;
-    height: 25px;
-    background: #FFFFFF;
-    border: 1px solid #C5C5C5;
-    border-radius: 0px 7px 7px 0px;
-    text-align: center;
-    -webkit-border-radius: 0px 7px 0px 0px;
-    -moz-border-radius: 0px 7px 7px 0px;
-    -ms-border-radius: 0px 7px 7px 0px;
-    -o-border-radius: 0px 7px 7px 0px;
+.normal-shipping p,
+.fast-shipping p {
+  float: left;
+  display: block;
+  margin-left: 250px;
+  margin-top: 25px;
 }
 
-.billing-state{
-    margin-top: 0px;
-    width: 220px;
-    height: 25px;
-    background: #FFFFFF;
-    border: 1px solid #C5C5C5;
-    border-radius: 0px 0px 0px 7px;
-    text-align: center;
-    -webkit-border-radius: 0px 0px 0px 7px;
-    -moz-border-radius: 0px 0px 0px 7px;
-    -ms-border-radius: 0px 0px 0px 7px;
-    -o-border-radius: 0px 0px 0px 7px;
-}
-.billing-zipcode{
-    margin-top: 0px;
-    width: 175px;
-    height: 25px;
-    background: #FFFFFF;
-    border: 1px solid #C5C5C5;
-    border-radius: 0px 0px 7px 0px;
-    text-align: center;
-    -webkit-border-radius: 0px 0px 7px 0px;
-    -moz-border-radius: 0px 0px 7px 0px;
-    -ms-border-radius: 0px 0px 7px 0px;
-    -o-border-radius: 0px 0px 7px 0px;
+.payment-container h2,
+.payment-container p {
+  text-align: left;
+  margin-left: 150px;
 }
 
+.card-info {
+  text-align: left;
+  margin-left: 200px;
+  font-size: 20px;
 
-
-
-
-
-.at-icon{
-    position: absolute;
-    color: #8B8B8B;
-    margin-top: 15px;
-    margin-left: 5px;
-}
-.card-icon{
-    position: absolute;
-    color: #8B8B8B;
-    margin-top: 10px;
-    margin-left: 5px;
-
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -ms-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-}
-.name-icon{
-    position: absolute;
-    color: #8B8B8B;
-    margin-top: 15px;
-    margin-left: 5px;
+  margin-left: 150px;
+  margin-top: 15px;
 }
 
+.email-input,
+.cardholder-input {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  width: 400px;
+  height: 30px;
 
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 7px;
 
-
-
-
-
-
-.totals-text{
-    float: left;
-    text-align: left;
-    margin-left: 150px;
-
+  text-align: center;
 }
-.totals-res{
-    text-align: left;
-    margin-left: 450px;
+
+.card-number {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  width: 290px;
+  height: 25px;
+
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 7px 0px 0px 7px;
+
+  text-align: center;
+  font-size: 10px;
+}
+.card-expdate {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  width: 50px;
+  height: 25px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 0px;
+  font-size: 10px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+}
+.card-cvc {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  width: 50px;
+  height: 25px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 0px 7px 7px 0px;
+  font-size: 10px;
+  -webkit-border-radius: 0px 7px 7px 0px;
+  -moz-border-radius: 0px 7px 7px 0px;
+  -ms-border-radius: 0px 7px 7px 0px;
+  -o-border-radius: 0px 7px 7px 0px;
+}
+.billing-address {
+  margin-top: 10px;
+  margin-bottom: 0px;
+  width: 250px;
+  height: 25px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 0px 7px 7px 0px;
+  text-align: center;
+  -webkit-border-radius: 0px 7px 0px 0px;
+  -moz-border-radius: 0px 7px 7px 0px;
+  -ms-border-radius: 0px 7px 7px 0px;
+  -o-border-radius: 0px 7px 7px 0px;
+}
+
+.billing-state {
+  margin-top: 0px;
+  width: 220px;
+  height: 25px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 0px 0px 0px 7px;
+  text-align: center;
+  -webkit-border-radius: 0px 0px 0px 7px;
+  -moz-border-radius: 0px 0px 0px 7px;
+  -ms-border-radius: 0px 0px 0px 7px;
+  -o-border-radius: 0px 0px 0px 7px;
+}
+.billing-zipcode {
+  margin-top: 0px;
+  width: 175px;
+  height: 25px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 0px 0px 7px 0px;
+  text-align: center;
+  -webkit-border-radius: 0px 0px 7px 0px;
+  -moz-border-radius: 0px 0px 7px 0px;
+  -ms-border-radius: 0px 0px 7px 0px;
+  -o-border-radius: 0px 0px 7px 0px;
+}
+
+.at-icon {
+  position: absolute;
+  color: #8b8b8b;
+  margin-top: 15px;
+  margin-left: 5px;
+}
+.card-icon {
+  position: absolute;
+  color: #8b8b8b;
+  margin-top: 10px;
+  margin-left: 5px;
+
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+}
+.name-icon {
+  position: absolute;
+  color: #8b8b8b;
+  margin-top: 15px;
+  margin-left: 5px;
+}
+
+.totals-text {
+  float: left;
+  text-align: left;
+  margin-left: 150px;
+}
+
+.totals-res {
+  text-align: left;
+  margin-left: 450px;
 }
