--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,53 +1,53 @@
-form{
-    display: inline-block;
+.login-container form {
+  display: inline-block;
 }
 
-input[type=text] {
-    background: transparent;
-    border: none;
-    border-bottom: 3px #4e4e4e solid; 
-    margin: 20px;
-    width: 300px;
-    font-size: large;
-    letter-spacing: 3px;
+.login-container input[type="text"] {
+  background: transparent;
+  border: none;
+  border-bottom: 3px #4e4e4e solid;
+  margin: 20px;
+  width: 300px;
+  font-size: large;
+  letter-spacing: 3px;
 }
 
-body {
-    text-align: center;
+.login-container body {
+  text-align: center;
 }
 
-h4{
-    letter-spacing: 2px;
+.login-container h4 {
+  letter-spacing: 2px;
 }
 
-.forgotPassword{
-    text-decoration: none;
-    color: black;
+.forgotPassword {
+  text-decoration: none;
+  color: black;
 }
 
-.createAccount{
-    text-decoration: underline;
-    color: black;
+.createAccount {
+  text-decoration: underline;
+  color: black;
 }
 
-.login{
-    padding: 5px;
+.login {
+  padding: 5px;
 }
 
-img{
-    width: 325px;
+.login-container img {
+  width: 325px;
 }
 
-.login-container{
-    margin-top: 80px;
+.login-container {
+  margin-top: 80px;
 }
 
-.btn-login{
-    background-color: rgb(0, 153, 255);
-    border-radius: 10%;
-    border: 2px solid rgb(0, 153, 255);
-    color: white;
-    height: 30px;
-    width: 80px;
-    margin-left: 100px;
+.btn-login {
+  background-color: rgb(0, 153, 255);
+  border-radius: 10%;
+  border: 2px solid rgb(0, 153, 255);
+  color: white;
+  height: 30px;
+  width: 80px;
+  margin-left: 100px;
 }
