--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -5,3 +5,52 @@
     overflow: hidden;
     box-shadow: -3px 0px 5px 0px rgba(0,0,0,0.75) inset;
 }
+
+.vertical-div p{
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.profile-pic{
+    vertical-align: middle;
+    width: 125px;
+    height: 125px;
+    border-radius: 50%;
+    border: solid black;
+}
+
+.Profile{
+    margin-top: 70px;
+}
+
+.Options{
+    margin-top: 50%;
+    font-size: 20px;
+}
+
+.Options img{
+    height: 25px;
+    width: 25px;
+}
+
+.profile-container a{
+    text-decoration: none;
+    color: black;
+    margin-left: 10px;
+}
+
+.my-details{
+    margin: 50px;
+}
+
+.my-orders{
+    margin: 50px;
+}
+
+.account-settings{
+    margin: 50px;
+}
+
+.profile-container{
+    display: flex;
+}
