--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .login-container form {
   display: inline-block;
 }
@@ -19,28 +18,24 @@
 
 .login-container h4 {
   letter-spacing: 2px;
-=======
-.login-container form{
-    display: inline-block;
 }
 
-.login-container input[type=text] {
-    background: transparent;
-    border: none;
-    border-bottom: 3px #4e4e4e solid; 
-    margin: 20px;
-    width: 300px;
-    font-size: large;
-    letter-spacing: 3px;
+.login-container input[type="text"] {
+  background: transparent;
+  border: none;
+  border-bottom: 3px #4e4e4e solid;
+  margin: 20px;
+  width: 300px;
+  font-size: large;
+  letter-spacing: 3px;
 }
 
 .login-container body {
-    text-align: center;
+  text-align: center;
 }
 
-.login-container h4{
-    letter-spacing: 2px;
->>>>>>> 1b2c8ae3b94f614f202eeb2e3593a9c122e08917
+.login-container h4 {
+  letter-spacing: 2px;
 }
 
 .forgotPassword {
@@ -57,13 +52,8 @@
   padding: 5px;
 }
 
-<<<<<<< HEAD
 .login-container img {
   width: 325px;
-=======
-.login-container img{
-    width: 325px;
->>>>>>> 1b2c8ae3b94f614f202eeb2e3593a9c122e08917
 }
 
 .login-container {
