--- a/src/components/register.css
+++ b/src/components/register.css
@@ -1,4 +1,17 @@
-<<<<<<< HEAD
+.register-container form {
+  display: inline-block;
+}
+
+.register-container input[type="text"] {
+  background: transparent;
+  border: none;
+  border-bottom: 3px #4e4e4e solid;
+  margin: 20px;
+  width: 300px;
+  font-size: large;
+  letter-spacing: 3px;
+}
+
 .register-container form {
   display: inline-block;
 }
@@ -15,24 +28,6 @@
 
 .register-container body {
   text-align: center;
-=======
-.register-container form{
-    display: inline-block;
-}
-
-.register-container input[type=text] {
-    background: transparent;
-    border: none;
-    border-bottom: 3px #4e4e4e solid; 
-    margin: 20px;
-    width: 300px;
-    font-size: large;
-    letter-spacing: 3px;
-}
-
-.register-container body {
-    text-align: center;
->>>>>>> 1b2c8ae3b94f614f202eeb2e3593a9c122e08917
 }
 
 .btn-register {
@@ -46,15 +41,9 @@
   margin-left: 210px;
 }
 
-<<<<<<< HEAD
 .register-container h4 {
   letter-spacing: 2px;
   font-size: 20px;
-=======
-.register-container h4{
-    letter-spacing: 2px;
-    font-size: 20px;
->>>>>>> 1b2c8ae3b94f614f202eeb2e3593a9c122e08917
 }
 
 .register-container {
