--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -1,3 +1,7 @@
+
+.cart-container{
+    overflow: hidden;
+}
 .summary-container{
     width: 50%;
     float: left;
@@ -6,23 +10,23 @@
 }
 .summary-container h2, .summary-container p{
     text-align: left;
-    margin-left: 400px;
+    margin-left: 200px;
 }
 
 .payment-container{
     background-color: rgb(30, 95, 116);
-    border-radius: 25px;
-    position: relative ;
-    left: 200px;
-    width: 50%;
+    border-radius: 25px 0px 0px 25px;
+    position: absolute;
+    left: 65%;
+    width: 35%;
     float: right;
     color: white;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
-
+    -webkit-border-radius: 25px 0px 0px 25px;
+    -moz-border-radius: 25px 0px 0px 25px;
+    -ms-border-radius: 25px 0px 0px 25px;
+    -o-border-radius: 25px 0px 0px 25px;
     margin-top: 70px;
+    height: 80%;
 }
 
 
@@ -83,121 +87,248 @@
 
 .payment-container h2, .payment-container p{
     text-align: left;
-    margin-left: 350px;
+    margin-left: 150px;
 
     
-}
+} 
 
 .card-info{
     text-align: left;
     margin-left: 200px;
     font-size: 20px;
 
-    float: left;
-    display: block;
-    margin-left: 15px;
+    
+    margin-left: 150px;
     margin-top: 15px;
 }
 
 .email-input, .cardholder-input{
     margin-top: 10px;
     margin-bottom: 15px;
-    width: 300px;
+    width: 380px;
     height: 25px;
 
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
     border-radius: 7px;
+
+    text-align: center;
+}
+
+.card-detail{
+    width: 380px;
 }
 
 .card-number{
     margin-top: 10px;
     margin-bottom: 15px;
-    width: 150px;
+    width: 275px;
     height: 25px;
 
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
-    border-radius: 7px;
+    border-radius: 7px 0px 0px 7px;
+
+    text-align: center;
+    font-size: 10px;
 }
 .card-expdate{
     margin-top: 10px;
     margin-bottom: 15px;
-    width: 60px;
+    width: 45px;
     height: 25px;
-
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
-    border-radius: 7px;
+    border-radius: 0px;
+    font-size: 10px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -ms-border-radius: 0px;
+    -o-border-radius: 0px;
 }
 .card-cvc{
     margin-top: 10px;
     margin-bottom: 15px;
-    width: 80px;
+    width: 40px;
     height: 25px;
-
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
-    border-radius: 7px;
+    border-radius: 0px 7px 7px 0px;
+    font-size: 10px;
+    -webkit-border-radius: 0px 7px 7px 0px;
+    -moz-border-radius: 0px 7px 7px 0px;
+    -ms-border-radius: 0px 7px 7px 0px;
+    -o-border-radius: 0px 7px 7px 0px;
 }
+
+.billing-adress-info{
+    width: 400px;
+}
+
 .billing-address{
     margin-top: 10px;
     margin-bottom: 0px;
-    width: 300px;
+    width: 258px;
     height: 25px;
-
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
-    border-radius: 7px;
-    
+    border-radius: 0px 7px 7px 0px;
+    text-align: center;
+    -webkit-border-radius: 0px 7px 0px 0px;
+    -moz-border-radius: 0px 7px 7px 0px;
+    -ms-border-radius: 0px 7px 7px 0px;
+    -o-border-radius: 0px 7px 7px 0px;
 }
+
 .billing-state{
     margin-top: 0px;
-    margin-bottom: 15px;
-    width: 147px;
+    width: 200px;
     height: 25px;
-
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
-    border-radius: 7px;
+    border-radius: 0px 0px 0px 7px;
+    text-align: center;
+    -webkit-border-radius: 0px 0px 0px 7px;
+    -moz-border-radius: 0px 0px 0px 7px;
+    -ms-border-radius: 0px 0px 0px 7px;
+    -o-border-radius: 0px 0px 0px 7px;
 }
 .billing-zipcode{
     margin-top: 0px;
-    margin-bottom: 15px;
-    width: 147px;
+    width: 172px;
     height: 25px;
-
     background: #FFFFFF;
     border: 1px solid #C5C5C5;
-    border-radius: 7px;
+    border-radius: 0px 0px 7px 0px;
+    text-align: center;
+    -webkit-border-radius: 0px 0px 7px 0px;
+    -moz-border-radius: 0px 0px 7px 0px;
+    -ms-border-radius: 0px 0px 7px 0px;
+    -o-border-radius: 0px 0px 7px 0px;
 }
 
-.totals{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100px;
-    height: 200px;
 
-    text-align: right;
+
+
+
+
+.at-icon{
+    position: absolute;
+    color: #8B8B8B;
+    margin-top: 15px;
+    margin-left: 5px;
 }
-
-.pay-btn{
+.card-icon{
+    position: absolute;
+    color: #8B8B8B;
     margin-top: 10px;
-    background-color: white;
-    border-style: hidden;
-    color: black;
-    padding: 5px;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    margin-left: 5px;
 
-    width: 500px;
-    font-size: large;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
 }
-.pay-btn:hover{
-    cursor: pointer;
-    background-color: #C5C5C5;
+.name-icon{
+    position: absolute;
+    color: #8B8B8B;
+    margin-top: 15px;
+    margin-left: 5px;
+}
+
+
+
+
+
+
+
+
+.totals-text{
+    float: left;
+    text-align: left;
+    margin-left: 150px;
+
+}
+.totals-res{
+    text-align: left;
+    margin-left: 450px;
+}
+
+
+
+
+
+
+
+
+.button-80 {
+  background: #fff;
+  backface-visibility: hidden;
+  border-radius: .375rem;
+  border-style: solid;
+  border-width: .125rem;
+  box-sizing: border-box;
+  color: #212121;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,Helvetica,sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: -.01em;
+  line-height: 1.3;
+  padding: .875rem 1.125rem;
+  position: relative;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  height: 50px;
+  width: 150px;
+  text-align: center;
+  margin-top: 20px;
+  -webkit-border-radius: .375rem;
+  -moz-border-radius: .375rem;
+  -ms-border-radius: .375rem;
+  -o-border-radius: .375rem;
+}
+
+.button-80:not(:disabled):hover {
+  transform: scale(1.05);
+}
+
+.button-80:not(:disabled):hover:active {
+  transform: scale(1.05) translateY(.125rem);
+  -webkit-transform: scale(1.05) translateY(.125rem);
+  -moz-transform: scale(1.05) translateY(.125rem);
+  -ms-transform: scale(1.05) translateY(.125rem);
+  -o-transform: scale(1.05) translateY(.125rem);
+}
+
+.button-80:focus {
+  outline: 0 solid transparent;
+}
+
+.button-80:focus:before {
+  content: "";
+  left: calc(-1*.375rem);
+  pointer-events: none;
+  position: absolute;
+  top: calc(-1*.375rem);
+  transition: border-radius;
+  user-select: none;
+}
+
+.button-80:focus:not(:focus-visible) {
+  outline: 0 solid transparent;
+}
+
+.button-80:focus:not(:focus-visible):before {
+  border-width: 0;
+}
+
+.button-80:not(:disabled):active {
+  transform: translateY(.125rem);
 }
