Inputs 3 and some changes

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -20,7 +20,7 @@
   letter-spacing: 2px;
 }
 
-.login-container input[type="text"] {
+.login-container input[type="password"] {
   background: transparent;
   border: none;
   border-bottom: 3px #4e4e4e solid;
