--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -3,8 +3,15 @@
   max-width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-gap: 10rem;
+  grid-gap: 50rem;
   margin-top: 1%;
+}
+/* Left part */
+.sumarry-container h2 {
+  text-align: center;
+}
+.sumarry-container p {
+  text-align: center;
 }
 /* Right/Blue part of the cart */
 .payment-container {
@@ -13,10 +20,10 @@
   border-radius: 25px 0px 0px 25px;
 }
 .payment-container h2 {
-  margin-left: -40%;
+  text-align: center;
 }
 .payment-container p {
-  margin-left: -40%;
+  text-align: center;
 }
 
 /* Card info */
@@ -47,7 +54,8 @@
 }
 /* email/cardholder */
 .email-input,
-.cardholder-input {
+.cardholder-input,
+.phone-number-input {
   margin-top: 10px;
   margin-bottom: 15px;
   width: 380px;
@@ -75,11 +83,14 @@
   border-radius: 7px;
 
   text-align: center;
+  width: 600px;
 }
 .card-number {
   width: 250px;
 }
-.card-expdate,
+.card-expdate{
+  width: 60px;
+}
 .card-cvc {
   width: 60px;
 }
@@ -95,11 +106,11 @@
   border: 1px solid #c5c5c5;
   border-radius: 7px;
   color: black;
-  height: 30px;
+  height: 31px;
   width: 200px;
   text-align: left;
   font-size: 10px;
-  border-radius: 0px 7px 7px 0px;
+  border-radius: 0px 7px 0px 0px;
 }
 .billing-state {
   margin: 0px;
@@ -123,7 +134,10 @@
   width: 200px;
   text-align: left;
   font-size: 10px;
-  border-radius: 0px 7px 7px 0px;
+  border-radius: 0px 0px 7px 0px;
+}
+.order-notes{
+  padding-top: 15px;
 }
 /* Button */
 .button-80 {
@@ -158,7 +172,7 @@
   -ms-border-radius: 0.375rem;
   -o-border-radius: 0.375rem;
 
-  align-items: left;
+  align-items: center;
   margin-left: -40%;
   margin-right: auto;
 }
@@ -258,17 +272,18 @@
 }
 .totals-res {
   text-align: left;
+  display: grid;
   margin-left: 40%;
 }
 
 /* @media */
-@media (min-width: 600px) {
+@media (min-width: 756px) {
   .cart-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 756px) {
   .cart-container {
     grid-template-columns: repeat(1, 1fr);
   }
