--- a/src/styles/country.css
+++ b/src/styles/country.css
@@ -1,16 +1,12 @@
-.country{
-    margin-top: 0px;
-    background: #FFFFFF;
-    border: 1px solid #C5C5C5;
-    border-radius: 7px;
-    color: black;
-    height: 30px;
-    width: 120px;
-    text-align: left;
-    font-size: 10px;
-    border-radius: 7px 0px 0px 0px;
-    -webkit-border-radius: 7px 0px 0px 0px;
-    -moz-border-radius: 7px 0px 0px 0px;
-    -ms-border-radius: 7px 0px 0px 0px;
-    -o-border-radius: 7px 0px 0px 0px;
+.country {
+  margin: 0px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 7px;
+  color: black;
+  height: 35px;
+  width: 200px;
+  text-align: left;
+  font-size: 10px;
+  border-radius: 7px 0px 0px 0px;
 }
