--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -1,53 +1,69 @@
-/* NAVIGATION AREA */
-nav {
+header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #152238;
-  height: 50px;
-  padding: 0.5rem;
-}
-
-nav > div > a {
-  margin: 1rem;
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-  letter-spacing: 3px;
-  text-transform: uppercase;
-}
-
-nav > div > a:hover {
-  font-weight: 600;
-}
-
-nav > div > input[type="text"] {
-  padding: 6px;
-  border: none;
-  border-bottom: 2px solid white;
-  font-size: 17px;
-  width: 40vw;
+  height: 80px;
+  padding: 0 2rem;
   background-color: #152238;
   color: white;
 }
-
-nav > div > input[type="text"]:focus {
-  outline: none;
-  transform: scale(1.1);
-}
-
-i {
+.white-letters {
   color: white;
 }
-
-.hamburguer-menu {
-  display: none;
-}
-
 .red-letters {
   color: red;
 }
+.logo-bar {
+  text-decoration: none;
+}
+nav a {
+  margin: 0 2rem;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+.logo-bar:hover,
+nav a:hover {
+  font-weight: 600;
+}
 
-.cart-icon {
-  font-size: 20px;
-  transform: translate(-30%, 25%);
+header .nav-btn {
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: white;
+  visibility: hidden;
+  opacity: 0;
+}
+
+@media only screen and (max-width: 756px) {
+  header .nav-btn {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  header nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    background-color: #152238;
+    transition: 1s;
+    transform: translateY(-100vh);
+    position: fixed;
+    z-index: 1000;
+  }
+
+  header .responsive_nav {
+    transform: none;
+  }
 }
