--- a/src/styles/orderdetail.css
+++ b/src/styles/orderdetail.css
@@ -1,55 +1,51 @@
-.orders-container{
-    border: 1px solid rgb(181, 181, 181);
-    border-radius: 12px;
-
-    margin-left: auto;
-    margin-right: auto;
-
-    width: 600px;
-    height: 240px;
-
-    display: flex;
+.order-container {
+  border: 1px solid rgb(181, 181, 181);
+  border-radius: 12px;
+  width: 600px;
+  height: 240px;
+  margin: 3em;
+  display: flex;
 }
 
-.orders-container img{
-    border: 1px solid rgb(181, 181, 181);
-    border-radius: 12px;
+.orders-container img {
+  border: 1px solid rgb(181, 181, 181);
+  border-radius: 12px;
 
-    float: left;
-    margin-left: 15px;
-    margin-bottom: 15px;
-    
-    height: 120px;
-    width: 120px;
+  float: left;
+  margin-left: 15px;
+  margin-bottom: 15px;
+
+  height: 120px;
+  width: 120px;
 }
-
 
 /* .order-options{
     float: right;
 } */
 
-.order-options button{
-    margin: 5px;
-    width: 115px;
-    height: 20px;
-    background-color: rgb(0, 153, 255);
-    border: 2px solid rgb(0, 153, 255);
-    color: white;
+.order-options button {
+  margin: 5px;
+  width: 115px;
+  height: 20px;
+  background-color: rgb(0, 153, 255);
+  border: 2px solid rgb(0, 153, 255);
+  color: white;
 }
 
-.orders-status{
-    display: flex;
-    flex-direction: column;
+.orders-status {
+  display: flex;
+  flex-direction: column;
 }
 
-.order-info{
-    text-align: left;
+.order-info {
+  text-align: left;
 }
 
-.order-info h5, .order-info h3{
-    margin-left: 10px;
+.order-info h5,
+.order-info h3 {
+  margin-left: 10px;
 }
 
-.delivery-status{
-    margin-top: 75px;
+.delivery-status {
+  margin-top: 75px;
 }
